# Alt

./: .altctl.yaml  .claudeignore  .cursorignore  .dockerignore  .env.example  .env.template  .gitignore  .skaffoldignore  AGENTS.md  Alt-arch.mmd  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  Dockerfile.shared-auth-go  Dockerfile.shared-auth-python  GEMINI.md  Makefile  PLAN_CORE.md  README.md  alt-backend-improvement-analysis.md  arch.mmd  backup-postgres-docker.sh  build-images.sh  c2quay.yml  compose.augur.yaml  compose.dev.yaml  compose.tts.supertonic.yaml  compose.tts.yaml  compose.yaml  deploy-procedure.md  generate-secrets.sh  output.txt  register_rss_feed.sh  renovate.json  services.yaml  skills-lock.json  start-dev.sh  start.sh
acolyte-orchestrator/: CLAUDE.md  Dockerfile  main.py  pyproject.toml
acolyte-orchestrator/acolyte/config/: settings.py
acolyte-orchestrator/acolyte/domain/: brief.py  citation_format.py  claim.py  compressed_evidence.py  critic_taxonomy.py  eval.py  exceptions.py  executive_summary.py  fact.py  fusion.py  hyde.py  language_quota.py  meta_patterns.py  paragraph.py  query_facet.py  query_variant.py  quote_selection.py  report.py  run.py  section_contract.py  source_map.py  writer_prompt.py
acolyte-orchestrator/acolyte/gateway/: checkpoint_factory.py  memory_content_store.py  memory_job_gw.py  memory_report_gw.py  news_creator_gw.py  news_creator_hyde_gw.py  ollama_gw.py  postgres_job_gw.py  postgres_report_gw.py  search_indexer_gw.py  vllm_gw.py
acolyte-orchestrator/acolyte/handler/: connect_service.py
acolyte-orchestrator/acolyte/infra/: logging.py  mtls_client.py  peer_identity.py
acolyte-orchestrator/acolyte/port/: content_store.py  evidence_provider.py  hyde_generator.py  job_queue.py  llm_provider.py  report_evaluator.py  report_repository.py
acolyte-orchestrator/acolyte/usecase/: create_report_uc.py  get_report_uc.py  list_reports_uc.py  rerun_section_uc.py  start_run_uc.py
acolyte-orchestrator/evaluation/: __init__.py  compare.py  dataset.py  judge.py  metrics.py  run_eval.py
acolyte-orchestrator/evaluation/datasets/: baseline.jsonl  judge_calibration.jsonl
acolyte-orchestrator/evaluation/generators/: __init__.py  db_replay.py  (+1 more)
acolyte-orchestrator/scripts/: resume_run.py
acolyte-orchestrator/tests/: conftest.py
dashboard/: Dockerfile  app.py  entrypoint.sh  pyproject.toml  requirements.txt  sse_server.py  system_monitor.py  utils.py
dashboard/tabs/: admin_jobs.py  classification.py  clustering.py  log_analysis.py  overview.py  recap_jobs.py  summarization.py  system_monitor_sse_client.py  system_monitor_tab.py
dashboard/tests/: conftest.py  test_system_monitor.py  test_utils.py
metrics/: CLAUDE.md  pyproject.toml
metrics/tests/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_config.py  test_error_budget.py  test_models.py
monitors/utilizer/: README.md  pyproject.toml
news-creator/app/: CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
plecto/: .gitignore  Cargo.toml  manifest.toml
plecto/src/: lib.rs
rask-log-aggregator/app/: .env.template  CLAUDE.md  Cargo.toml  GEMINI.md  LOG_PROCESSING_REQUIREMENTS.md
rask-log-forwarder/app/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile.rask-log-forwarder  GEMINI.md  Makefile  build.rs  docker-compose.example.yml
recap-evaluator/: .dockerignore  Dockerfile  pyproject.toml
recap-evaluator/dashboard/: app.py
recap-evaluator/tests/: conftest.py
recap-subworker/: .dockerignore  .gitignore  Dockerfile.recap-subworker  Dockerfile.training  README.md  pyproject.toml  train_model.sh
recap-subworker/recap_subworker/: __init__.py  __main__.py
recap-subworker/scripts/: augment_backtrans.py  augment_eda.py  augment_llm_synthetic.py  build_30class_training_csv.py  evaluate_genres.py  merge_augmented_data.py  optimize_hyperparams.py  prepare_dataset.py  train_classifier_gpu.py  tune_thresholds.py  validate_augmentation.py  validate_schema.py  verify_30class_artefacts.py
recap-subworker/tests/: conftest.py
recap-worker/recap-worker/: .env.sample  Cargo.toml  PIPELINE_FLOW.md  clippy.toml
rerank-server/: LICENSE  README.md  pyproject.toml  requirements.txt  rerank_server.py  setup-socat.sh
rerank-server/tests/: test_rerank_server.py
scripts/: README-check-classification-metrics.md  README-docker-cleanup.md  README-migrate-articles.md  README-nginx-log-analysis.md  _deploy_lib.sh  adr_graph.py  analyze-nginx-logs.sh  analyze_clickhouse_performance.py  analyze_docker_logs.py  analyze_short_articles.py  backfill_article_feed_ids.py  backfill_knowledge_home.sql  bayes_optimize_graph_boost.py  cascade-pki-sidecars.sh  check-no-service-token.sh  check_classification_metrics.sql  check_japanese_summaries.py  classification_metrics_investigation_report.md  classify_feed_urls.py  compose-image-audit.py  compute_genre_weights_statistically.py  compute_recap_coverage.py  deploy.sh  diagnose_bayes_optimization.py  docker-cleanup.service  docker-cleanup.sh  docker-cleanup.timer  dump_genre_training_set.sh  evaluate_tag_quality.py  explain_feed_queries.sql  export_recap_db_to_md.py  export_recap_db_to_md.sh  export_recap_db_to_md_docker.py  fix_adr_obsidian_links.py  generate-sbom.sh  generate_genre_verification_report_docker.py  get-docker-gid.sh  graph_boost_utils.py  graph_boost_validation_flow.py  inspect_article_content.py  (+18 more)
scripts/backup/: README.md  backup-all.sh  backup-metrics.sh  crontab  restore-verify.sh  sync-offsite.sh
scripts/lint/: check-link-vs-url-naming.sh
scripts/tests/: test-pact-check-filter.sh  test_adr_graph.py
tag-generator/app/: CLAUDE.md  GEMINI.md  INPUT_SANITIZATION.md  README.md  auth_service.py  conftest.py  db_pool.py  demo_sanitization.py  main.py  pyproject.toml  pyproject.toml.ultra-minimal  pyrightconfig.json  tag_fetcher.py  test_model_optimization.py  test_performance.py  test_performance_critical.py  test_unit.py
tts-speaker/: .dockerignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
tts-speaker/scripts/: generate_voice_samples.py  list_speakers.py
tts-speaker/tests/: conftest.py
(+8773 files in other folders)
