[project]
name = "acolyte-orchestrator"
version = "0.1.0"
description = "Versioned report generation orchestrator with LangGraph pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Web framework (ASGI)
    "starlette>=0.46.0",
    "uvicorn[standard]>=0.34.0",

    # Data validation & configuration
    "pydantic>=2.12.0",
    "pydantic-settings>=2.7.0",

    # Logging
    "structlog>=25.4.0",

    # Connect-RPC (typed service boundary)
    "connect-python>=0.9.0",
    "protobuf>=6.33.5,<7.0",

    # Database
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",

    # HTTP client (for news-creator, search-indexer)
    "httpx>=0.28.0",

    # LangGraph orchestration
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.0",

    # OpenTelemetry
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",
    "httpx>=0.28.0",

    # Code Quality
    "ruff>=0.12.0",
    "pyrefly>=0.42.0",
    "bandit>=1.9.0",

    # Contract testing (Pact CDC)
    "pact-python>=3.2.1",
]

[tool.uv]
constraint-dependencies = ["protobuf>=6.33.5,<7.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "--cov=acolyte",
    "--cov-report=term-missing",
    "-v",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 120
exclude = [".git", "__pycache__", ".venv", "build", "dist", "acolyte/gen"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "S",  # bandit (security)
]
ignore = [
    "S101", # assert in tests
    "S104", # bind all interfaces (intentional for containers)
    "E501", # line too long (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S603", "S110"]

[tool.pyrefly]
project-includes = ["."]
project-excludes = [
    "**/__pycache__",
    "**/.venv",
    "acolyte/gen/**",
]
python-version = "3.14"

[tool.pyrefly.errors]
missing-import = false
missing-module-attribute = false
