[project]
name = "dashboard"
version = "0.1.0"
description = "Alt Platform Dashboard"
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.54.0",
    "pandas==2.2.3",
    "sqlalchemy==2.0.46",
    "psycopg2-binary==2.9.11",
    "psutil>=5.9.0",
]

[tool.uv]
constraint-dependencies = ["Pillow>=12.1.1"]
