[project]
name = "dashboard"
version = "0.1.0"
description = "Alt Platform Dashboard"
requires-python = ">=3.14"
dependencies = [
    "streamlit==1.54.0",
    "pandas==2.2.3",
    "sqlalchemy==2.0.46",
    "psycopg2-binary==2.9.11",
    "psutil>=5.9.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.42.0",
]

[tool.uv]
constraint-dependencies = ["Pillow>=12.2.0", "tornado>=6.5.5"]

[tool.pyrefly]
project-includes = ["."]
project-excludes = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
python-version = "3.14"
