[project]
name = "dashboard"
version = "0.1.0"
description = "Alt Platform Dashboard"
requires-python = ">=3.14"
dependencies = [
    "streamlit==1.59.0",
    "pandas==3.0.3",
    "sqlalchemy==2.0.51",
    "psycopg2-binary==2.9.12",
    "psutil>=5.9.0",
]

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
]

[tool.uv]
constraint-dependencies = ["Pillow>=12.3.0"]

[tool.pyrefly]
project-includes = ["."]
project-excludes = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
python-version = "3.14"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
