[project]
name = "alt-metrics"
version = "0.2.0"
description = "Alt システム健全性アナライザー - ClickHouseからのメトリクスレポート生成"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect>=0.8.0",
    "pydantic>=2.10.0",
    "structlog>=25.4.0",
    "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.12.0",
    "pyrefly>=0.42.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alt_metrics"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S"]
ignore = ["S101", "S608", "B905"]  # S608: SQL injection (intentional), B905: zip strict (ClickHouse rows)

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S108", "S603", "S110"]  # S105/S108: test passwords/paths

[tool.pyrefly]
project-includes = ["src"]
project-excludes = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
python-version = "3.13"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--cov=alt_metrics", "--cov-report=term-missing"]
