[project]
name = "alt-metrics"
version = "0.2.0"
description = "Alt システム健全性アナライザー - ClickHouseからのメトリクスレポート生成"
requires-python = ">=3.14"
dependencies = [
    "clickhouse-connect>=1.4.2",
    "pydantic>=2.13.4",
    "structlog>=26.1.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
    "pyrefly>=1.1.1",
]

[tool.uv]
package = true
constraint-dependencies = ["Pygments>=2.20.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alt_metrics"]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S"]
ignore = ["S101", "S608", "B905"]  # S608: SQL injection (intentional), B905: zip strict (ClickHouse rows)

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S108", "S603", "S110"]  # S105/S108: test passwords/paths

[tool.pyrefly]
project-includes = ["src"]
project-excludes = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
python-version = "3.14"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--cov=alt_metrics", "--cov-report=term-missing"]
