[project]
name = "recap-evaluator"
version = "0.1.0"
description = "RecapJob精度評価マイクロサービス - 7日間Recapの品質を多角的に評価"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "asyncpg>=0.30.0",

    # HTTP Client (Ollama連携)
    "httpx>=0.28.0",

    # Data Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Evaluation Libraries
    "scikit-learn>=1.6.0",
    "numpy>=2.2.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",

    # Report Generation
    "jinja2>=3.1.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",

    # Logging
    "structlog>=25.1.0",

    # OpenTelemetry
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",

    # Scheduling
    "apscheduler>=3.10.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",

    # Code Quality
    "ruff>=0.8.0",

    # Type Checking
    "pyrefly>=0.17.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [".git", "__pycache__", ".venv", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "RUF001", # Ambiguous unicode chars (intentional in Japanese prompts)
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
project_includes = ["src"]
search_path = ["src"]
python_version = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--cov=src/recap_evaluator",
    "--cov-report=term-missing",
]
