[project]
name = "recap-subworker"
version = "0.1.0"
description = "Alt recap evidence clustering subworker"
requires-python = "~=3.12.0"
readme = "README.md"
authors = [{ name = "Alt Engineering" }]
dependencies = [
  "fastapi>=0.115.12",
  "uvicorn[standard]>=0.32.0",
  "gunicorn>=22.0.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.3.0",
  "orjson==3.11.4",
  "prometheus-fastapi-instrumentator==7.1.0",
  "fastjsonschema==2.21.2",
  "sentence-transformers==5.1.2",
  "cleanlab>=2.6.6",
  "datasets>=3.0.0",
  "pyyaml>=6.0.1",
  "sentencepiece>=0.2.0",
  "numpy<2.0.0",
  "scikit-learn>=1.5.0",
  "scikit-optimize>=0.10.2",
  "pandas>=2.2.2",
  "umap-learn>=0.5.6",
  "scipy>=1.13.1",
  "hdbscan>=0.8.41",
  "optuna>=3.6.0",
  "structlog>=24.2.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "httpx>=0.27.0",
  "nltk>=3.8.1",
  "spacy>=3.7.5",
  "janome>=0.5.0",
  "xxhash>=3.4.1",
  "statsmodels>=0.14.2",
  "trafilatura>=1.10.0",
  "imbalanced-learn>=0.12.3",
  "sudachipy>=0.6.8",
  "sudachidict-core>=20240409",
  "transformers>=4.41.0",
  "torch>=2.3.0",
  "fugashi>=1.3.2",
  "unidic-lite>=1.0.8",
  "deepeval>=0.21.0",
  "psycopg2-binary>=2.9.9",
  "bert-score>=0.3.13",
  "gensim>=4.3.0",
  "faiss-cpu>=1.7.4",
]

[project.optional-dependencies]
distill = ["sentence-transformers==5.1.2"]
onnx = ["onnxruntime>=1.19.0", "onnxruntime-tools>=1.7.0"]

[project.scripts]
recap-subworker = "recap_subworker.__main__:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["recap_subworker"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["perf: performance tests"]
