[project]
name = "recap-subworker"
version = "0.1.0"
description = "Alt recap evidence clustering subworker"
requires-python = ">=3.14"
readme = "README.md"
authors = [{ name = "Alt Engineering" }]
dependencies = [
  "fastapi>=0.115.12",
  "uvicorn[standard]>=0.32.0",
  "gunicorn>=22.0.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.3.0",
  "orjson>=3.11.6",
  "prometheus-fastapi-instrumentator==7.1.0",
  "opentelemetry-sdk>=1.29.0",
  "opentelemetry-exporter-otlp-proto-http>=1.29.0",
  "opentelemetry-instrumentation-logging>=0.50b0",
  "fastjsonschema==2.21.2",
  "sentence-transformers==5.3.0",
  "cleanlab>=2.6.6",
  "datasets>=3.0.0",
  "pyyaml>=6.0.1",
  "sentencepiece>=0.2.0",
  "numpy>=2.0.0",
  "scikit-learn>=1.5.0",
  "scikit-optimize>=0.10.2",
  "pandas>=2.2.2",
  "umap-learn>=0.5.6",
  "scipy>=1.13.1",
  "hdbscan>=0.8.41",
  "optuna>=3.6.0",
  "structlog>=24.2.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "httpx>=0.27.0",
  "nltk>=3.8.1",
  "spacy>=3.7.5",
  "janome>=0.5.0",
  "xxhash>=3.4.1",
  "statsmodels>=0.14.2",
  "trafilatura>=1.10.0",
  "imbalanced-learn>=0.12.3",
  "sudachipy>=0.6.8",
  "sudachidict-core>=20240409",
  "transformers>=5.0.0",
  "torch>=2.3.0",
  "fugashi>=1.3.2",
  "unidic-lite>=1.0.8",
  "deepeval>=0.21.0",
  "psycopg2-binary>=2.9.9",
  "bert-score>=0.3.13",
  # gensim 4.4.0 has C extensions incompatible with Python 3.14 (PyLongObject ABI change)
  # Usage is optional (try/except in services/coherence.py) — re-add when gensim releases 3.14 wheels
  # "gensim>=4.3.0",
  "faiss-cpu>=1.7.4",
  "tbb>=2022.0",
]

[project.optional-dependencies]
distill = ["sentence-transformers==5.3.0"]
onnx = ["onnxruntime>=1.19.0", "onnxruntime-tools>=1.7.0"]

[project.scripts]
recap-subworker = "recap_subworker.__main__:main"

[tool.uv]
package = true
constraint-dependencies = ["wheel>=0.46.2", "protobuf>=6.33.5", "Pillow>=12.1.1", "lxml-html-clean>=0.4.4", "aiohttp>=3.13.4", "Pygments>=2.20.0", "onnx>=1.21.0"]

[tool.setuptools]
packages = ["recap_subworker"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pyrefly>=0.42.0",
  "ruff>=0.6.0",
  "pact-python>=3.2.1",
  "uvicorn>=0.32.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# Phase 0 ベースライン: 安全かつ自動修正可能なルールのみ有効化
# BLE / ASYNC / TRY は Phase 5 (async 堅牢化) で段階的に追加する
select = [
  "E", "W", "F", "I",      # pycodestyle / pyflakes / isort
  "B",                     # flake8-bugbear
  "UP",                    # pyupgrade
  "SIM",                   # flake8-simplify
  "C4",                    # flake8-comprehensions
  "PTH",                   # pathlib
  "RUF",                   # ruff-specific
]
ignore = [
  "E501",                  # line length (formatter で扱う)
  "B008",                  # FastAPI Depends() の引数評価は意図的
  "B023",                  # function definition does not bind loop variable (closure パターン)
  "RUF001", "RUF002", "RUF003",  # 日本語 docstring/comment の confusable 警告は誤検出
  "RUF012",                # mutable class attr は dataclass default で意図的
]

[tool.ruff.lint.per-file-ignores]
# 学習スクリプトは条件付き sys.path 操作 + 後置 import が必須パターン
"recap_subworker/learning_machine/scripts/**/*.py" = ["E402", "E722", "E701", "F841", "PTH", "B904", "SIM"]
# infra/classifier のトレーニングスクリプトも同様
"recap_subworker/infra/classifier/**/*.py" = ["PTH", "B904"]
# Gunicorn 設定は postgres ライブラリの遅延 import が必要
"recap_subworker/infra/gunicorn_conf.py" = ["E402"]

[tool.pyrefly]
project-includes = ["."]
project-excludes = ["**/__pycache__", "**/.venv", "**/build", "**/dist", "**/*.egg-info", "tests/**"]
python-version = "3.14"
replace-imports-with-any = [
    "torch.*", "transformers.*", "sentence_transformers.*",
    "sklearn.*", "scipy.*", "numpy.*", "pandas.*",
    "hdbscan.*", "umap.*", "optuna.*", "gensim.*",
    "faiss.*", "datasets.*", "spacy.*", "janome.*",
    "sudachipy.*", "fugashi.*", "deepeval.*",
    "imblearn.*", "statsmodels.*", "trafilatura.*",
    "cleanlab.*", "bert_score.*", "fastjsonschema.*",
]

[tool.pyrefly.errors]
missing-import = false
missing-module-attribute = false

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["perf: performance tests"]
