[project]
name = "rerank-server"
version = "0.1.0"
description = "MLX-based rerank server for cross-encoder reranking"
requires-python = ">=3.14"
dependencies = [
    "sentence-transformers>=5.2.3",
    "fastapi>=0.133.0",
    "uvicorn>=0.41.0",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.42.0",
    "pytest>=8.0.0",
]

[tool.uv]
constraint-dependencies = ["Pygments>=2.20.0"]

# CPU-only index for torch: avoids pulling ~5GB of unused CUDA/nvidia/triton
# packages into local `uv sync` on non-GPU Linux dev machines (this service
# actually deploys to a Mac via rsync + pip, not via this lockfile).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyrefly]
project-includes = ["."]
project-excludes = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
python-version = "3.14"

[tool.pyrefly.errors]
missing-import = false
missing-module-attribute = false
