[project]
name = "alt-scripts"
version = "0.1.0"
description = "Utility scripts for Alt project analytics and data processing"
requires-python = ">=3.14"
dependencies = [
  # Database connectivity
  "psycopg2-binary>=2.9.0",
  "clickhouse-connect>=0.8.0",
  # Data processing and Parquet output
  "pandas>=2.0.0",
  "pyarrow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]
