[project]
name = "tts-speaker"
version = "0.1.0"
description = "Kokoro-82M Japanese TTS microservice"
requires-python = "~=3.12.0"
readme = "README.md"
authors = [{ name = "Alt Engineering" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.3.0",
    "kokoro>=0.9.4",
    "misaki[ja]>=0.9.3",
    "soundfile>=0.13.0",
    "numpy>=1.26.0",
    "protobuf>=5.0.0",
    "starlette>=0.40.0",
    "connect-python>=0.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["tts_speaker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["integration: integration tests requiring model download"]
asyncio_mode = "auto"
