[project]
name = "tts-speaker"
version = "0.1.0"
description = "Kokoro-82M Japanese TTS microservice"
requires-python = "~=3.12.0"
readme = "README.md"
authors = [{ name = "Alt Engineering" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.3.0",
    "kokoro>=0.9.4",
    "misaki[ja]>=0.9.3",
    "soundfile>=0.13.0",
    "numpy>=1.26.0",
    "protobuf>=7.34.1",
    "starlette>=0.40.0",
    "connect-python>=0.9.0",
    "alkana>=0.0.2",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "pyrefly>=0.42.0",
    "pact-python>=3.2.1",
]

[tool.uv]
package = true
constraint-dependencies = ["Pygments>=2.20.0"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.setuptools]
packages = ["tts_speaker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyrefly]
project-includes = ["."]
project-excludes = ["**/__pycache__", "**/.venv", "**/build", "**/dist", "**/*.egg-info", "tests/**"]
python-version = "3.12"

[tool.pyrefly.errors]
missing-import = false
missing-module-attribute = false

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["integration: integration tests requiring model download"]
asyncio_mode = "auto"
