[project]
name = "tts-speaker"
version = "0.2.0"
description = "Qwen3-TTS-12Hz-0.6B-CustomVoice Japanese TTS microservice"
requires-python = "~=3.12.0"
readme = "README.md"
authors = [{ name = "Alt Engineering" }]
dependencies = [
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.3.0",
    "qwen-tts>=0.1.0",
    "torchaudio>=2.6.0",
    # Capped <5: qwen-tts 0.1.1 (latest on PyPI) hard-pins transformers==4.57.3,
    # so raising this floor cannot move the resolved version until qwen-tts
    # publishes a new release.
    "transformers>=4.57,<5",
    "soundfile>=0.13.0",
    # Capped <2.5: numba (pulled in transitively via qwen-tts -> librosa)
    # requires numpy<2.5 even at its latest release (0.66.0); an uncapped
    # floor lets uv pick numpy>=2.5 and fall back to numba 0.53.1, which
    # ships an llvmlite too old to build on Python 3.12.
    "numpy>=1.26.0,<2.5",
    "protobuf>=7.34.1",
    "starlette>=0.40.0",
    "connect-python>=0.9.0",
    "alkana>=0.0.2",
    "torch>=2.6.0",
    "supertonic>=1.3",
    "huggingface-hub>=0.24",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "pyrefly>=0.42.0",
    "pact-python>=3.2.1",
]

[tool.uv]
package = true
# gradio/msgpack are transitive-only (qwen-tts -> gradio, gradio-client ->
# msgpack) and qwen-tts leaves them unpinned; constrain here to close known
# CVEs (GHSA-7hp7-4p35-3cx2, GHSA-6v7p-g79w-8964).
constraint-dependencies = ["Pygments>=2.20.0", "gradio>=6.15.0", "msgpack>=1.2.1"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[tool.setuptools]
packages = ["tts_speaker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyrefly]
project-includes = ["."]
project-excludes = ["**/__pycache__", "**/.venv", "**/build", "**/dist", "**/*.egg-info", "tests/**"]
python-version = "3.12"

[tool.pyrefly.errors]
missing-import = false
missing-module-attribute = false

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["integration: integration tests requiring model download"]
asyncio_mode = "auto"
