[project]
name = "news-creator"
version = "0.1.0"
description = "LLM-powered summarization service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.20.0",
    "aiohttp>=3.13.4",
    "PyJWT>=2.12.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.12.5",
    "json-repair>=0.27.0",
    "bleach>=6.0.0",
    "jinja2>=3.1.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "sentence-transformers>=3.0.0",  # Cross-encoder for re-ranking
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver for analysis scripts
    "numpy>=1.26.0",  # Percentile calculations
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",  # Required for FastAPI TestClient
    "pyrefly>=0.42.0",
    "pact-python>=3.2.1",
    "ruff>=0.9.0",  # Linting and formatting
    "bandit>=1.9.0",  # Security scanning
]

[tool.uv]
constraint-dependencies = ["protobuf>=6.33.5", "Pygments>=2.20.0"]

[tool.pyrefly]
project-includes = ["news_creator"]
project-excludes = ["**/__pycache__", "**/.venv", "**/build", "**/dist", "**/*.egg-info", "tests", "tests/**", "scripts", "scripts/**"]
python-version = "3.13"
replace-imports-with-any = [
    "sentence_transformers.*", "numpy.*",
]

[tool.pyrefly.errors]
missing-import = false
missing-module-attribute = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
