[project]
name = "news-creator"
version = "0.1.0"
description = "LLM-powered summarization service"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.20.0",
    "aiohttp>=3.13.4",
    "PyJWT>=2.12.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.12.5",
    "json-repair>=0.27.0",
    "bleach>=6.0.0",
    "jinja2>=3.1.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "opentelemetry-exporter-prometheus>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-client>=0.21.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.11.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
scripts = ["psycopg2-binary>=2.9.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "pyrefly>=0.42.0",
    "pact-python>=3.2.1",
    "ruff>=0.9.0",
    "bandit>=1.9.0",
]

[tool.uv]
constraint-dependencies = ["protobuf>=6.33.5", "Pygments>=2.20.0"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[tool.pyrefly]
project-includes = ["news_creator"]
project-excludes = ["**/__pycache__", "**/.venv", "**/build", "**/dist", "**/*.egg-info", "tests", "tests/**", "scripts", "scripts/**"]
python-version = "3.14"
replace-imports-with-any = [
    "sentence_transformers.*", "numpy.*",
]

[tool.pyrefly.errors]
missing-import = false
missing-module-attribute = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
