[package]
name = "rask"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# For log rotation timestamp and duration handling
chrono = { version = "0.4.41", features = ["serde"] }
clickhouse = "0.13.3"
config = "0.15.11"
async-trait = "0.1.88"
anyhow = "1.0.98"

[dev-dependencies]
tracing-test = "0.2.5"
reqwest = { version = "0.12.21", features = ["json"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
