[package]
name = "rask"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "time", "fs", "io-util", "sync", "macros", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# For log rotation timestamp and duration handling
chrono = { version = "0.4.45", features = ["serde"] }
clickhouse = { version = "0.15.1", features = ["inserter", "time", "chrono"] }
anyhow = "1.0.103"
thiserror = "2.0"

# OpenTelemetry Protocol support
opentelemetry-proto = { version = "0.32", features = ["gen-tonic", "logs", "trace"] }
prost = "0.14"
prost-types = "0.14"
tonic = { version = "0.14", features = ["transport"] }
hex = "0.4"

# HTTP body handling
bytes = "1.12"
http-body-util = "0.1"

# Request decompression (forwarder sends gzip-compressed NDJSON/OTLP bodies)
tower-http = { version = "0.7", features = ["decompression-gzip"] }

# Healthcheck HTTP client
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

# Async utilities (CancellationToken for graceful shutdown)
tokio-util = "0.7"

[dev-dependencies]
tracing-test = "0.2.6"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tempfile = "3.27"
axum-test = "21"
proptest = "1.11"
criterion = { version = "0.8", features = ["html_reports"] }
flate2 = "1.1.9"

[[bench]]
name = "otlp_pipeline"
harness = false
