[package]
name = "rask-log-forwarder"
version = "0.1.0"
edition = "2024"

[lib]
name = "rask_log_forwarder"
path = "src/lib.rs"

[[bin]]
name = "rask-log-forwarder"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }

# Docker API client
bollard = { version = "0.17", features = ["time", "ssl"] }

# Zero-copy bytes
bytes = "1.7"

# SIMD JSON parsing
simd-json = { version = "0.13", features = ["serde_impl"] }

# Lock-free queue
multiqueue = "0.3"

# HTTP client
hyper = { version = "1.3", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "gzip"] }
url = "2.4"

# Async utilities
parking_lot = "0.12"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.10"
lazy_static = "1.4"

# File watching
notify = "6.1"

# Hostname detection
hostname = "0.4"

# Memory arena allocation
bumpalo = "3.14"

# Stream utilities
futures = "0.3"

# Async trait support
async-trait = "0.1"

# Compression
flate2 = "1.0"

# Disk fallback (optional)
sled = { version = "0.34", optional = true }

# Metrics (optional)
prometheus = { version = "0.14.0", optional = true }
warp = { version = "0.3", optional = true }

# Random number generation for jitter
rand = "0.9.1"

# gRPC (optional)
tonic = { version = "0.13.1", optional = true }
prost = { version = "0.14.1", optional = true }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.13"
mockall = "0.13"
wiremock = "0.6"
httpmock = "0.7"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serial_test = "3.0"

[features]
default = ["disk-fallback", "metrics"]
disk-fallback = ["sled"]
metrics = ["prometheus", "warp"]
grpc = ["tonic", "prost"]

[[bench]]
name = "parser_benchmarks"
path = "benches/parser_benchmarks.rs"
harness = false

[[bench]]
name = "throughput_benchmarks"
path = "benches/buffer/throughput_benchmarks.rs"
harness = false

[[bench]]
name = "memory_benchmarks"
path = "benches/buffer/memory_benchmarks.rs"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
