[package]
name = "rask-log-forwarder"
version = "0.1.0"
edition = "2024"

[lib]
name = "rask_log_forwarder"
path = "src/lib.rs"

[[bin]]
name = "rask-log-forwarder"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.45.1", features = ["full"] }

# Docker API client
bollard = { version = "0.19.1", features = ["time", "ssl"] }

# Zero-copy bytes
bytes = "1.10.1"

# SIMD JSON parsing
simd-json = { version = "0.15.1", features = ["serde_impl"] }

# HTTP client
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.14", features = ["client", "http1", "client-legacy"] }
http-body-util = "0.1.3"
reqwest = { version = "0.12.20", features = ["json", "gzip"] }
url = "2.5.4"

# Async utilities
parking_lot = "0.12.4"

# CLI parsing
clap = { version = "4.5.40", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"
bincode = { version = "2.0.1", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Time handling
chrono = { version = "0.4.41", features = ["serde"] }

# Regular expressions
regex = "1.11.1"
lazy_static = "1.5.0"

# Memory arena allocation
bumpalo = "3.19.0"

# Stream utilities
futures = "0.3.31"

# Async trait support
async-trait = "0.1.88"

# Compression
flate2 = "1.1.2"

# Disk fallback (optional)
sled = { version = "0.34.7", optional = true }

# Metrics (optional)
prometheus = { version = "0.14.0", optional = true }
warp = { version = "0.3.7", optional = true }

# Random number generation for jitter
rand = "0.9.1"

# Hostname detection
hostname = "0.4.1"

# gRPC (optional)
tonic = { version = "0.13.1", optional = true }
prost = { version = "0.14.1", optional = true }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
tokio-test = "0.4.4"
tempfile = "3.20.0"
mockall = "0.13.1"
wiremock = "0.6"
httpmock = "0.7.0"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
serial_test = "3.2.0"

[features]
default = ["disk-fallback", "metrics"]
disk-fallback = ["sled"]
metrics = ["prometheus", "warp"]
grpc = ["tonic", "prost"]

[[bench]]
name = "parser_benchmarks"
path = "benches/parser_benchmarks.rs"
harness = false

[[bench]]
name = "throughput_benchmarks"
path = "benches/buffer/throughput_benchmarks.rs"
harness = false

[[bench]]
name = "memory_benchmarks"
path = "benches/buffer/memory_benchmarks.rs"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
